Se cambió el nombre de Hotel Mundo a Travel Easy y algunas correciones de ortografía

--- a/src/SistemaPrincipal/ControlyReserva.form
+++ b/src/SistemaPrincipal/ControlyReserva.form
@@ -236,7 +236,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Dialog" size="48" style="1"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="HOTEL &quot;MUNDO&quot;"/>
+                    <Property name="text" type="java.lang.String" value="TRAVEL EASY"/>
                   </Properties>
                 </Component>
               </SubComponents>
