--- a/src/Vistas/Reserva.form
+++ b/src/Vistas/Reserva.form
@@ -229,7 +229,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="18" style="1"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Habitacion"/>
+        <Property name="text" type="java.lang.String" value="Habitaci&#xf3;n"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnHabitacionActionPerformed"/>
